[package]
name = "canister-rs"
version = "1.0.0"
authors = ["TheRealKeto <therealketo@gmail.com>"]
edition = "2021"
description = "A POC for an async wrapper for the Canister API"
repository = "https://github.com/TheRealKeto/canister-rs"
license = "BSD-3-Clause"

[dependencies]
maybe-async = "0.2.6"
thiserror = "1.0.37"

[dependencies.reqwest]
version = "0.11.13"
optional = true
features = ["json", "blocking"]

[dependencies.serde]
version = "1.0.150"
features = ["derive"]

[dependencies.tokio]
version = "1.23.0"
optional = true
features = ["full"]

[features]
default = ["async"]
async = ["reqwest", "tokio"]
blocking = ["reqwest/blocking", "maybe-async/is_sync"]
