[package]
name = "canister-rs"
version = "1.0.0"
authors = ["TheRealKeto <therealketo@gmail.com>"]
edition = "2021"
description = "A POC for an async wrapper for the Canister API"
readme = "README.md"
repository = "https://github.com/TheRealKeto/canister-rs"
license = "BSD-3-Clause"
keywords = ["canister", "api", "wrapper"]

[lib]
name = "canister"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
maybe-async = "0.2.6"
serde = { version = "1.0.150", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["full"], optional = true }

[dependencies.reqwest]
version = "0.11.13"
optional = true
features = ["json", "blocking"]

[features]
default = ["async"]
async = ["reqwest", "tokio"]
blocking = ["reqwest/blocking", "maybe-async/is_sync"]
