[package]
name = "canister-rs"
version = "1.1.0"
authors = ["Keto <therealketo@gmail.com>"]
edition = "2021"
rust-version = "1.88"
description = "POC async wrapper for the Canister API"
readme = "README.md"
repository = "https://github.com/TheRealKeto/canister-rs"
license = "BSD-3-Clause"
keywords = ["canister", "api", "api-wrapper"]

[lib]
name = "canister"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "canister"
path = "src/main.rs"

[dependencies]
maybe-async = "0.2.10"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.24.2", features = ["full"], optional = true }

[dependencies.reqwest]
version = "0.12.22"
optional = true
features = ["json", "blocking"]

[features]
default = ["async"]
async = ["reqwest", "tokio"]
blocking = ["reqwest/blocking", "maybe-async/is_sync"]
